--- a/iStoreFX/src/main/resources/com/example/istorefx/Account.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/Account.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.istorefx.AccountController">
@@ -40,7 +41,7 @@
                      </font>
                   </Label>
                   <Button layoutX="96.0" layoutY="344.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="228.0" style="-fx-background-color: #FF9494; -fx-background-radius: 5;" text="Delete account" />
-                  <Button layoutX="393.0" layoutY="215.0" mnemonicParsing="false" style="-fx-background-color: #ffffff; -fx-background-radius: 5;" text="Change username" />
+                  <Button layoutX="517.0" layoutY="139.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="112.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;" text="Change username" />
                   <Button layoutX="393.0" layoutY="140.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;" text="Change email" />
                   <Button layoutX="96.0" layoutY="303.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="228.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;" text="Change password" />
                </children>
@@ -66,12 +67,13 @@
             </children></AnchorPane>
         <AnchorPane layoutX="730.0" layoutY="106.0" prefHeight="513.0" prefWidth="183.0" style="-fx-background-color: #274C77;">
             <children>
-                <Separator layoutX="34.0" layoutY="136.0" prefHeight="0.0" prefWidth="114.0" />
-                <Separator layoutX="34.0" layoutY="175.0" prefHeight="0.0" prefWidth="114.0" />
-                <Button fx:id="AllUsersButton" layoutX="34.0" layoutY="109.0" mnemonicParsing="false" onAction="#AllUsers" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Other user" textFill="#fafafa" />
-                <Button disable="true" layoutX="34.0" layoutY="148.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="My account" textFill="#fafafa" />
-                <Separator layoutX="34.0" layoutY="221.0" prefHeight="0.0" prefWidth="114.0" />
-                <Button fx:id="_disconnectButton" layoutX="34.0" layoutY="194.0" mnemonicParsing="false" onAction="#Disconnect" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Disconnect" textFill="#fafafa" />
+                <Separator layoutX="34.0" layoutY="74.0" prefHeight="0.0" prefWidth="114.0" />
+                <Separator layoutX="34.0" layoutY="115.0" prefHeight="0.0" prefWidth="114.0" />
+                <Button fx:id="AllUsersButton" layoutX="34.0" layoutY="47.0" mnemonicParsing="false" onAction="#AllUsers" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Other user" textFill="#fafafa" />
+                <Button disable="true" layoutX="34.0" layoutY="88.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="My account" textFill="#fafafa" />
+                <Separator layoutX="34.0" layoutY="161.0" prefHeight="0.0" prefWidth="114.0" />
+                <Button fx:id="_disconnectButton" layoutX="34.0" layoutY="134.0" mnemonicParsing="false" onAction="#Disconnect" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Disconnect" textFill="#fafafa" />
+            <Pane layoutY="1.0" prefHeight="200.0" prefWidth="183.0" />
             </children>
         </AnchorPane>
     </children>
