--- a/iStoreFX/src/main/resources/com/example/istorefx/AllUsers.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AllUsers.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -25,9 +27,16 @@
                         </Label>
                   <Pane layoutX="36.0" layoutY="110.0" prefHeight="370.0" prefWidth="551.0" style="-fx-background-color: #E7ECEF;">
                      <children>
-                        <ScrollPane layoutX="14.0" layoutY="58.0" prefHeight="301.0" prefWidth="522.0" style="-fx-background-color: #ffffff;" />
-                        <TextField layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="336.0" promptText=" username or user email..." />
-                        <Button layoutX="386.0" layoutY="13.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #A3CEF1; -fx-border-color: #274C77; -fx-border-radius: 5;" text="Search">
+                        <ScrollPane layoutX="14.0" layoutY="58.0" prefHeight="301.0" prefWidth="522.0" style="-fx-background-color: #ffffff;">
+                           <content>
+                              <GridPane fx:id="_usersListPane" prefHeight="302.0" prefWidth="507.0" style="-fx-background-color: #ffffff;">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                              </GridPane>
+                           </content></ScrollPane>
+                        <TextField fx:id="_searchBar" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="336.0" promptText=" username or user email..." />
+                        <Button fx:id="_searchButton" layoutX="386.0" layoutY="13.0" mnemonicParsing="false" onAction="#searchRequest" prefHeight="27.0" prefWidth="150.0" style="-fx-background-color: #A3CEF1; -fx-border-color: #274C77; -fx-border-radius: 5;" text="Search">
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
